// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ActionCreate Creates a non-unique bodypart 1`] = `
[
  {
    "asset": "a/body/base",
  },
  {
    "asset": "a/body/head",
  },
  {
    "asset": "a/body/eyes",
  },
  {
    "asset": "a/body/lips",
  },
  {
    "asset": "a/body/front_hair1",
  },
]
`;

exports[`ActionCreate Creates a non-unique bodypart and reorders it in place 1`] = `
[
  {
    "asset": "a/body/base",
  },
  {
    "asset": "a/body/head",
  },
  {
    "asset": "a/body/eyes",
  },
  {
    "asset": "a/body/lips",
  },
  {
    "asset": "a/body/back_hair_normal",
  },
  {
    "asset": "a/body/front_hair1",
  },
]
`;

exports[`ActionCreate Creates a unique bodypart and replaces the old one 1`] = `
[
  {
    "asset": "a/body/base",
  },
  {
    "asset": "a/body/head",
  },
  {
    "asset": "a/body/eyes2",
  },
  {
    "asset": "a/body/lips",
  },
]
`;

exports[`ActionCreate Creates a wearable asset 1`] = `
[
  {
    "asset": "a/body/base",
  },
  {
    "asset": "a/body/head",
  },
  {
    "asset": "a/body/eyes",
  },
  {
    "asset": "a/body/lips",
  },
  {
    "asset": "a/panties/style1",
  },
]
`;

exports[`ActionCreate Creates a wearable asset and another one ordered before it 1`] = `
[
  {
    "asset": "a/body/base",
  },
  {
    "asset": "a/body/head",
  },
  {
    "asset": "a/body/eyes",
  },
  {
    "asset": "a/body/lips",
  },
  {
    "asset": "a/headwear/top_hat",
  },
  {
    "asset": "a/panties/style1",
  },
]
`;
